# gauss-lobatto-bounds

./: .gitignore  CITATION.cff  LICENSE  README.md  higherconvexity_adaptive.py  higherconvexity_experiments.py  higherconvexity_rules.py  latex_github_repo_patch.diff  pyproject.toml  requirements-dev.txt
notebooks/: classical_error_exercise.ipynb  numerical_experiments_frontend.ipynb
src/gauss_lobatto_bounds/: __init__.py  adaptive.py  experiments.py  rules.py
tests/: test_adaptive.py  test_experiments.py  test_rules.py
