[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauss-lobatto-bounds"
version = "1.0.0"
description = "Companion code for 'Refined Gauss--Lobatto bounds for odd-order convexity' (Kania, Wąsowicz)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  { name = "Tomasz Kania" },
  { name = "Szymon Wąsowicz" },
]
keywords = [
    "quadrature",
    "numerical integration",
    "Gauss-Lobatto",
    "Gauss-Legendre",
    "certified bounds",
    "error estimation",
    "Peano kernel",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
experiments = [
    "pandas>=2.0",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://users.math.cas.cz/~kania/"
Repository = "https://github.com/tomasz-kania/gauss-lobatto-bounds"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["E501", "D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true
